Added IDE setup hints to README.md